stop hint from overflowing

--- a/src/stylesheets/techRadar.scss
+++ b/src/stylesheets/techRadar.scss
@@ -53,6 +53,7 @@
   background-color: #007179;
   color: white;
   text-align: center;
+  overflow: hidden;
 }
 
 p {
